[package]
name = "tokio-trace"
version = "0.1.0"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", git = "https://github.com/tokio-rs/tokio", rev = "b9e3d2edde33a12ead6df3895caeafa90f9db7e4", features = ["tracing"] }
tracing-subscriber = { version = "0.2", default-features = false, features = ["fmt"] }
tracing-core = "0.1"
# quanta = "0.6"
num_cpus = "1"
